[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/root.gd" type="Script" id=1]
[ext_resource path="res://scripts/Camera2D.gd" type="Script" id=2]
[ext_resource path="res://styles/ui_panel.tres" type="StyleBox" id=3]
[ext_resource path="res://scenes/hud.gd" type="Script" id=4]

[sub_resource type="Theme" id=1]

[node name="root" type="Node2D"]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
process_mode = 0
limit_left = 0
limit_top = 0
script = ExtResource( 2 )

[node name="hud" type="CanvasLayer" parent="Camera2D"]
script = ExtResource( 4 )

[node name="PanelContainer" type="PanelContainer" parent="Camera2D/hud"]
margin_left = 8.0
margin_top = 8.0
size_flags_horizontal = 8
size_flags_vertical = 8
theme = SubResource( 1 )
custom_styles/panel = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Camera2D/hud/PanelContainer"]
modulate = Color( 0.290196, 0.541176, 0.811765, 1 )
margin_right = 35.0
margin_bottom = 24.0
size_flags_horizontal = 8
size_flags_vertical = 8
custom_constants/separation = -4

[node name="Label_fps" type="Label" parent="Camera2D/hud/PanelContainer/VBoxContainer"]
margin_right = 15.0
margin_bottom = 14.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "FPS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_actors" type="Label" parent="Camera2D/hud/PanelContainer/VBoxContainer"]
margin_top = 10.0
margin_right = 35.0
margin_bottom = 24.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Actors:0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerInfo" type="PanelContainer" parent="Camera2D/hud"]
visible = false
margin_left = 8.0
margin_top = 50.0
margin_right = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Camera2D/hud/PlayerInfo"]
margin_right = 6.0
margin_bottom = 14.0
rect_min_size = Vector2( 30, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Camera2D/hud/PlayerInfo/VBoxContainer"]
margin_top = 5.0
margin_right = 40.0
margin_bottom = 40.0
grow_horizontal = 0
size_flags_horizontal = 3

[node name="Container" type="Container" parent="Camera2D/hud/PlayerInfo/VBoxContainer/HBoxContainer"]
margin_right = 25.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 16 )
size_flags_vertical = 3

[node name="PlayerSprite" type="AnimatedSprite" parent="Camera2D/hud/PlayerInfo/VBoxContainer/HBoxContainer/Container"]
offset = Vector2( 10, 0 )

[node name="PlayerType" type="Label" parent="Camera2D/hud/PlayerInfo/VBoxContainer/HBoxContainer"]
margin_bottom = 14.0
grow_horizontal = 0

[node name="PlayerPosition" type="Label" parent="Camera2D/hud/PlayerInfo/VBoxContainer"]
margin_right = 6.0
margin_bottom = 14.0

[node name="PlayerStatus" type="Label" parent="Camera2D/hud/PlayerInfo/VBoxContainer"]
margin_right = 40.0
margin_bottom = 14.0

[node name="Tween" type="Tween" parent="Camera2D"]
